add set unknown system validator settings